--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<!-- ini html -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dimas project</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- Bagian Header -->
+    <header>
+      <nav>
+        <div><img src="assets/untuk logo.jpeg" alt="ini logo" class="navigation_logo" /></div>
+        <div class="navigation_home">Home</div>
+        <div class="navigation_ourPackage">Our Package</div>
+        <div class="navigation_callUs">Call Us</div>
+      </nav>
+    </header>
+    <hr />
+    <!-- Bagian section dan artikel -->
+    <section>
+      <header>
+        <h1 class="section_text1">Your Trusted Travel Agent's</h1>
+        <p class="section_text2">Your happiness is our hapiness</p>
+      </header>
+      <article class="">
+        <div class="article_div1">ini gambar auto slide</div>
+        <div class="article_div2">ini form</div>
+      </article>
+    </section>
+
+  </body>
+</html>
